Fixed local git path in dev and included pull in agent for existing repo

--- a/resources/application.dev.yml
+++ b/resources/application.dev.yml
@@ -25,4 +25,4 @@ gitserver:
   username: TestOrchestrator
   password: TestOrchestrator
   email: TestOrchestrator@xqledger.com
-  localreposlocation: "/Users/administrator/workspace/projects/go/src/xqledger/xp-lab/diff/"
+  localreposlocation: "/var/git/repos/"
