--- a/resources/application.yml
+++ b/resources/application.yml
@@ -21,8 +21,9 @@ grpcresponse:
 
 gitserver:
   url: http://git-server:3000
-  authtoken: 1234sw
+  authtoken: ""
   username: TestOrchestrator
   password: TestOrchestrator
   email: TestOrchestrator@xqledger.com
-  localreposlocation: "/Users/administrator/workspace/projects/go/src/xqledger/xp-lab/diff/"
+  localreposlocation: "/var/git/repos/"
+
